--- a/styles/sideMenu.css
+++ b/styles/sideMenu.css
@@ -53,6 +53,7 @@
     padding: 1.5rem 0;
 
     font-size: 1rem;
+    font-weight: bold;
     text-align: center;
     text-transform: uppercase;
     color: var(--medium);
