--- a/styles/global.css
+++ b/styles/global.css
@@ -1,4 +1,6 @@
 @import url(sideMenu.css);
+@import url(card.css);
+@import url(search.css);
 
 :root {
     /* COLORS LIGHT MODE*/
@@ -23,15 +25,17 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    transition: background-color 200ms, color 200ms;
 }
 
 body {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: start;
-
     font-family: var(--font);
+
+    display: flex;
+    flex-direction: row;
+}
+
+main {
+    background-color: blueviolet;
 }
 
 ul {
