--- a/styles/search.css
+++ b/styles/search.css
@@ -1,5 +1,4 @@
-header {
-    width: 100%;
+.searchSection {
     height: 10rem;
     padding: 2rem;
 
@@ -7,7 +6,11 @@ header {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    
+
+    background-color: aqua;
 }
+
 
 .titleSection--name {
     color: var(--dark);
