--- a/styles/card.css
+++ b/styles/card.css
@@ -1,4 +1,13 @@
-.card{ 
+.card-container{ 
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+
+    padding: 1rem;
+}
+
+.card {
     background: linear-gradient(93deg, #003060 0%, #0E86D4 50.97%, #68BBE3 99.85%);
 
     display: flex;
