--- a/styles/card.css
+++ b/styles/card.css
@@ -12,9 +12,50 @@
 
     display: flex;
     flex-direction: row;
-    
+    gap: 2rem;
+
+    padding: 2rem;
     width: 60rem;
     height: 15rem;
 
     border-radius: 15px;
+}
+
+.info-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    gap: 0.5rem;
+
+    font-weight: 700;
+}
+
+.cityName{
+    color: var(--white);
+    
+    font-weight: 700;
+    font-size: 2rem;
+}
+
+.weatherDescription {
+    color: var(--white);
+
+    font-weight: 200;
+}
+
+.temperature {
+    color: var(--white);
+    
+    font-size: 3rem;
+}
+
+.temp-wrapper {
+    display: flex;
+    gap: 1rem;
+    
+    color: var(--white);
+    font-weight: 200;
+    font-size: 0.8rem;
+
 }
