--- a/styles/sideMenu.css
+++ b/styles/sideMenu.css
@@ -5,7 +5,7 @@
      */
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     gap: 1.5rem;
 
@@ -24,17 +24,39 @@
     max-width: 200px;
 }
 
-.form-wrapper{
+.menu-wrapper{
     width: 100%;
+    padding: 2rem;
 }
 
-.form-wrapper--menu {
+.menu-title {
+    text-align: center;
+
+    color: var(--white);
+
+    margin: 2rem;
+}
+
+.form-wrapper {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 1rem;
     
     font-size: 1.5rem;
 }
+
+.form-wrapper > input{
+    border-radius: 10px;
+
+    background: #0E86D4;
+    color: var(#68BBE3);
+
+    text-transform: uppercase;
+    font-weight: 700;
+    font-family: Poppins;
+    font-size: 1rem;
+}
+
 
 .target {
     background-color: var(--medium);
