--- a/styles/sideMenu.css
+++ b/styles/sideMenu.css
@@ -1,19 +1,17 @@
 .sideMenu {
-    /* position: fixed;
-    left: 0;
-    top: 0;
-     */
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     gap: 1.5rem;
 
     width: 20rem;
-    height: 100vh;
+    min-height: 100vh;
+    padding: 1rem;
+    
+    background-color: var(--darker);
     
     transition: left 0.3s ease-in-out;
-    background-color: var(--darker);
 }
 
 
