--- a/styles/sideMenu.css
+++ b/styles/sideMenu.css
@@ -32,7 +32,8 @@
 }
 
 .form-title {
-    font-size: 1rem;
+    font-size: 1rem;    
+    font-weight: bold;
 
     text-align: center;
     text-transform: uppercase;
