--- a/styles/card.css
+++ b/styles/card.css
@@ -21,6 +21,10 @@
     border-radius: 15px;
 }
 
+.icon {
+    width: 150px;
+}
+
 .info-wrapper{
     display: flex;
     flex-direction: column;
@@ -56,7 +60,6 @@
     flex-direction: row;
     flex-wrap: nowrap;
     gap: 1rem;
-    
 }
 
 .temp-wrapper > p {
@@ -64,3 +67,4 @@
     font-weight: 200;
     font-size: 0.8rem;
 }
+
