--- a/styles/card.css
+++ b/styles/card.css
@@ -12,13 +12,22 @@
 
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     gap: 2rem;
 
     padding: 2rem;
-    width: 60rem;
+    width: 100%;
     height: 15rem;
 
     border-radius: 15px;
+}
+
+.wrapper-left{
+    display: flex;
+    gap: 1rem;
+
+    width: calc(100% / 2);
 }
 
 .icon {
@@ -68,3 +77,23 @@
     font-size: 0.8rem;
 }
 
+
+.details-wrapper{
+    display: flex;
+    flex-direction: column;
+
+    gap: 1rem;
+
+    color: var(--white);
+    height: 100%;
+    width: calc(100% / 2);
+    justify-content: space-evenly;
+}
+
+.details-element{
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+
+    border-bottom: 1px solid white;
+}
